lesson6/css/small.css
/*phone viewport*/
@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
@import url('https://fonts.googleapis.com/css?family=El+Messiri&display=swap');


body {
    background-color: #F9F8F2 ; 
    margin: 0;
    padding: 0;
    text-align: center;
}

/*phone view*/
#banner{
    color:#1E2F23;
    background:radial-gradient(#F9F8F2 , #B39C4D , #B39C4D);
    text-align: center;
    font-size: 1em;
	margin: 0;
    padding: 0.25em;
}

main {
    margin: auto;
    display: block;
    grid-template-columns: 1fr;
    font-size: 1rem;
    grid-gap: 0.8em;
    padding: 0.8em;
}

header {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #482728;
    color: #9ae6c2;
    margin: 0 auto;
    text-align: center;
    padding: 15px;
    font-family: "El Messiri", "Papyrus", sans-serif;
    font-size: 0.8em;
}

header img{
    width: 50%;
}

header picture.weatherlogo{
    float:left;
}

h1 {
    color: white;
    text-align: center;
    font-weight: bold;
    font-family: "El Messiri", "Papyrus", sans-serif;
    margin-top: 0;
    margin-bottom: 0;
}

#h1p{
    text-align: center;
    margin-top: 0;
    margin-bottom: 0;
}

section{
    text-align: left;
    display: block;
    border-radius: 2.5px;
}
.headings{
    display: flex;
    flex-direction: column;
}

section img{
    max-width: 90%;
    padding-left: 1.30em;
}
section p{
    display: block;
    text-align: left;
    padding-left: 1.30em;
    padding-right: 1.30em;

}

h3 {
    text-align: center;
    margin-top:0px;
    padding:0.70em;
    padding-left: 1.30em;
}

h4 {
    padding-left: 1.30em;
}

h2 {
    color:#1E2F23 ;
    padding: 2px;
    margin: 0 auto;
    text-align: center;
}

.hero{
    position: relative;
}

.hero img {
    max-width: 100%;
    position:relative;

}
.weathersummary{
    position: absolute;
    top: 10px;
    left: 30px;
    background: radial-gradient(white,#734B5E);
    border: 1px solid black;
    padding: 1.5rem;
	box-shadow: 0 0 30px black;
    opacity: .8;
    line-height: 0.50rem;
}

#summary{
    display: grid;
    grid-template-columns: repeat(12, minmax(0, 8.33%));
}

.left {
    text-align: left;
    font-weight: bold;
    grid-column: span 7;
}

.right{
    grid-column: span 5;
}

#copyright {
    color: white;
}

#modified {
    color: #9ae6c2;
    font-size: 15px;
}

header,
nav,
main,
footer {
    align-content: center;
}

li {
    font-family: "El Messiri", "Papyrus", sans-serif;
}

nav button{
    font-size: 1.6rem;
    color:white;
}

.navigation{
    list-style:none;
    padding:0;
}

.navigation li:first-child{
    display: block;
    padding: 0.5em;
}

.navigation li{
    display: none;
}

.responsive li{
    display: block;
}

nav ul {
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #1E2F23;
}
nav ul li{
    display: block;
	color: white;
    font-size: 1.25rem;
    padding: 0.5em;
}

footer {
    background-color: #482728;
    color: #9ae6c2;
    margin: 0 auto;
    text-align: center;
    font-weight: bold;
    align-content: center;
    padding: 1em;
}

main.div {
    column-count: 3;
}

#byui {
    color: #9ae6c2;
}

nav a {
    color: white;
    text-decoration: none;
}

article h3{
    text-align: left;
}

article h4 {
	font-style: italic;
}

article p{
    font-size: 1.25rem;
}

article img {
    max-width: 50%;
    box-shadow: 0 0 2em black;
}
    
article {
    display: block;
    padding: 1em 1em 1em 1em;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 1em;
    margin-right: 1em;
    text-align: left;
    background-color: #B39C4D;
}

.forecast{
    display: none;
}

.map {
    display: none;
}

.contactinfo{
    background-color: black;
    color: white;
    padding: 2em;
    display: flex;
    justify-content: center;
    text-align: left;
}

.contactmethods{
    max-width: 60%;
}

.contactmethods img{
    max-width: 31px;
}

footer a:hover {
    background-color: #734B5E;
    color: #9ae6c2;
    border-radius: 5px;
    box-shadow: 5px 5px 5px black;
}

